@@ -8,7 +8,6 @@
 <body>
 
 <!-- ###ONLINE_FRIENDS_LIST### begin -->
-
 <ul>
 	<!-- ###LOOP:ONLINE_FRIENDS### begin -->
 	<!-- ###LOOP_CONTENT### -->
@@ -20,6 +19,10 @@
 </ul>
 
 <!-- ###ONLINE_FRIENDS_LIST###end -->
+
+<!-- ###ONLINE_FRIENDS_ERROR### begin -->
+###LLL:msg_no_friends_online###
+<!-- ###ONLINE_FRIENDS_ERROR###end -->
 
 </body>
 </html>
