@@ -1,3 +1,7 @@
+2008-10-07 Frank Naegler  <typo3@naegler.net>
+
+	* localize onlineFriendsWidget and added error message, if no friend is online
+
 2008-10-07 Ingo Renner  <ingo@typo3.org>
 
 	* added a method to the user gateway to find a user's online friends
